SVN
-------------------------------

RSS:   Resolved issue CASTOR-1809 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Finish cleanup of RSS file
       Details: http://jira.codehaus.org/browse/CASTOR-1809
       (Edward - 20070103)

Doc:   Resolved issue CASTOR-1808 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Cleanup of misc documentation
       Details: http://jira.codehaus.org/browse/CASTOR-1808
       (Edward - 20070103)

Doc:   Resolved issue CASTOR-1807 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add RSS feed link to index + news page
       Details: http://jira.codehaus.org/browse/CASTOR-1807
       (Edward - 20070103)

XML:   Resolved issue CASTOR-1798 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Cleaned up 246 warnings of differnet kind in builder package.
       Details: http://jira.codehaus.org/browse/CASTOR-1798
       (Ralf - 20070103)

XML:   Resolved issue CASTOR-1805 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Made org.exolab.castor.tools.ant.taskdefs.CastorSourceGenTask delegate to CastorCodeGenTask.
       Details: http://jira.codehaus.org/browse/CASTOR-1805
       (Ralf - 20070103)

XML:   Resolved issue CASTOR-1797 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Cleaned up 929 'Design For Extension' warnings at builder package.
       Details: http://jira.codehaus.org/browse/CASTOR-1797
       (Ralf - 20070102)

XML:   Resolved issue CASTOR-1796 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Cleaned up 351 'Maximum Line Length' warnings at builder package.
       Details: http://jira.codehaus.org/browse/CASTOR-1796
       (Ralf - 20070102)

XML:   Resolved issue CASTOR-1793 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Cleaned up 635 warnings with braces and whitespaces at builder package.